# landuse-map

./: .gitignore  Dockerfile  README.md  boundary.geojson  main.py  pyproject.toml
app/config/: config_db.py
app/models/: bundesland_model.py  landuse_model.py
app/persistence/: bundesland_persistence.py  landuse_persistence.py
app/routes/: landuse_routes.py
app/services/: file_export_service.py  landuse_by_bundesland_service.py  landuse_service.py  tiles_export_service.py
app/utils/: utils.py
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.jsx  api.ts  index.css
frontend/src/components/: LanduseMap.jsx  SideBar.jsx
tmp/: landuse_4d8f033e2ba848cfa6fe585ac41ca5f9.geojson
