[project]
name = "landuse-map"
version = "0.1.0"
description = "Landuse maps  from OSM data"
authors = [
    {name = "Rajalakshmi"}
]



readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "flask (>=3.1.1,<4.0.0)",
    "geopandas (>=1.1.1,<2.0.0)",
    "requests (>=2.32.4,<3.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "flask-restx (>=1.3.0,<2.0.0)",
    "flask-cors (>=6.0.1,<7.0.0)",
    "pyarrow (>=21.0.0,<22.0.0)",
    "fastparquet (>=2024.11.0,<2025.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
